static search term into twitter api to get results

--- a/css/main.css
+++ b/css/main.css
@@ -49,8 +49,12 @@ a:hover {
 
 #main {
     display: block;
-    width: 980px;
+    width: 940px;
     margin:0 auto;
     position:relative;
     background: #fff;
+    padding: 20px;
+}
+#main article{
+    margin: 10px 0;
 }
