--- a/css/main.css
+++ b/css/main.css
@@ -28,13 +28,13 @@ p, li, td {
 
 img { border: 0;}
 
-a {
-    color: #c7b299; 
+a, a:visited {
+    color: #0094C2; 
     text-decoration: none; 
 }
 
 a:hover { 
-    color: #fff;
+    color: #0080A6;
 }
 
 /*** Clearfix ***/
@@ -57,4 +57,9 @@ a:hover {
 }
 #main article{
     margin: 10px 0;
+    padding: 10px;
+}
+
+#main article:nth-child(odd){
+background: #eee;
 }
