--- a/css/main.css
+++ b/css/main.css
@@ -69,9 +69,9 @@ a:hover {
     padding: 40px 20px;
     -webkit-border-radius: 10px;
     border-radius: 10px;   
-    -webkit-box-shadow:  -3px 3px 3px 5px rgba(0, 0, 0, .2);
-    box-shadow:  -3px 3px 3px 5px rgba(0, 0, 0, .2);
-        
+    -webkit-box-shadow:  -3px 3px 3px 5px rgba(113, 113, 113, .1);
+    box-shadow:  -3px 3px 3px 5px rgba(113, 113, 113, .1);
+    behavior: url(PIE.htc);        
 }
 
 #main #tweets {
